# ybcc

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mycc.cpp  tinycc.cpp
.github/workflows/: cmake.yml
grammar/: C.g4  C.interp  CBaseVisitor.h  CLexer.cpp  CLexer.h  CParser.cpp  CParser.h  CPreprocess.g4  CVisitor.h  TinyC.g4
src/: CMakeLists.txt  mycc.cpp
src/AST/: AST.cpp  AST.h  DeclarationVisitor.cpp  DeclarationVisitor.h
src/CodeGen/: CodeGenVisitor.cpp  CodeGenVisitor.h
src/Declaration/: DeclarationVisitor.cpp  DeclarationVisitor.h
src/Error/: error.cpp  error.h
src/utilities/: CMakeLists.txt  SymTab.cpp  SymTab.h  type.cpp  type.h  utilities.h
test/: SDES.c  check.sh  dockercross-mips  double_link_list.c  hello.c  hello.tc  run.sh  test.c  test.sh
test/assembly/: hello_world.s  simple.s
test/src/: bubble_sort.c  calendar.c  hello.c  simple_main.c  test.c  unary.c
